<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfd"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/export_cert_title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#1972e4">

        <Button
            android:id="@+id/backbtn"
            android:contentDescription="뒤로가기"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_bak" />

        <TextView
            android:id="@+id/export_cert_title"
            android:contentDescription="인증서 내보내기"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/str_export_cert_title"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/export_cert_message"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/export_cert_title_layout"
        android:gravity="center"
        android:text="@string/str_export_cert_message"
        android:textColor="#333333"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/export_cert_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/export_cert_message"
        android:background="#dfdfdf" />

    <LinearLayout
        android:id="@+id/export_cert_sessiontime_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="#efefef"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/export_cert_sessiontime_text1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/str_sessiontime_text"
            android:textColor="#333333"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/export_cert_sessiontime_text2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:textColor="#f58309"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/export_cert_sessiontime_layout"
        android:layout_below="@+id/export_cert_line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_blue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/export_cert_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1972e4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/str_authnum"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/authcode_first"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authcode_second"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/str_qrcode"
            android:textColor="#333333"
            android:textSize="20dp" />

        <WebView
            android:id="@+id/export_cert_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"></WebView>


    </LinearLayout>

</RelativeLayout>