<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfd">

    <RelativeLayout
        android:id="@+id/import_authcode_title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#1972e4">

        <Button
            android:id="@+id/backbtn"
            android:contentDescription="뒤로가기"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_bak" />

        <TextView
            android:id="@+id/import_authcode_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/str_import_authcode_title"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/import_authcode_message"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/import_authcode_title_layout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/str_authnum"
            android:textColor="#1672e4"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/str_import_authcode_message"
            android:textColor="#333333"
            android:textSize="20dp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/import_authcode_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/import_authcode_message"
        android:background="#dfdfdf" />

    <Button
        android:id="@+id/import_authcode_ok_btn"
        android:contentDescription="인증서 가져오기"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="#1672e4"
        android:gravity="center"
        android:text="@string/str_export_cert_okbtn"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/import_authcode_ok_btn"
        android:layout_below="@+id/import_authcode_line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_blue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/import_authcode_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1972e4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/str_authnum"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <EditText
                    android:id="@+id/authcode_first"
                    android:contentDescription="인증번호 앞 네자리"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:gravity="center"
                    android:inputType="number"
                    android:cursorVisible="false"
                    android:maxLength="4"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/authcode_second"
                    android:contentDescription="인증번호 뒤 네자리"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:cursorVisible="false"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="1. "
                android:textColor="#1672e4"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/str_import_authcode_detail_message1"
                android:textColor="#333333"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="2. "
                android:textColor="#1672e4"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/str_import_authcode_detail_message2"
                android:textColor="#333333"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>